# PSPFunkin

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build commands.txt  build_all-pcdebug.sh  build_all-vita.sh  build_all.sh  build_chart.sh  buildassets.py  buildpc.sh  docs.md  todo.txt
.github/workflows/: main.yml
assets/: notepositions.json  notes.json
assets/SOURCE_FILES/: hud.pdn  icons.pdn  spooky_kids_sheet0.pdn
assets/characters/bf/: bf.json
assets/characters/dad/: dad.json  frames.json
assets/characters/gf/: frames.json  gf.json  speaker.json
assets/characters/pico/: pico.json
assets/characters/spooky_kids/: credit to mafurick!!.txt  spooky_kids.json
assets/menu/: atlas.json  menu.json  menuassets.json  options.xml
assets/menu/gftitle/: gfDanceTitle.json
assets/menu/logo/: logoBumpin.json
assets/menu/story/: storymenu.json
assets/menu/story/characters/bf/: frames.json
assets/menu/title/: logoBumpin.json  title.json
assets/menu/title/gf/: frames.json
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
assets/songs/: stream.vag
assets/songs/bopeebo/: config.json  events.json  test.py
assets/songs/dad-battle/: config.json
assets/songs/freaky/: freaky.json
assets/songs/fresh/: config.json
assets/songs/frostbite/: config.json  frostbite.json
assets/songs/last-spooktober/: config.json  last-spooktober.json
assets/songs/no-more-woah/: config.json  no-more-woah.json
assets/songs/philly/: config.json
assets/songs/pico/: config.json
assets/songs/south/: config.json
assets/songs/spookeez/: config.json
assets/songs/test/: config.json
assets/stages/philly/: philly.json
assets/stages/philly/backup/: philly.json
assets/stages/spooky/: spooky.json
assets/stages/stage/: stage.json
cht2bin/: CMakeLists.txt  cht2bin.cpp
fresh/: config.json
include/glad/: gl.h
outshit/: atlas.json
src/: app.h  app.hpp  camera.hpp  character.c  character.cpp  character.h  charlist.h  chartparser.cpp  chartparser.h  combo.cpp  combo.h  common.h  defs.h  error.cpp  error.h  game.cpp  game.h  gl.c  main.cpp  main.h  menu.c  menu.cpp  note.cpp  object.cpp  object.hpp  playstate.cpp  playstate.h  screen.cpp  screen.h  stage.cpp  stage.h  timer.cpp  timer.h  trans.cpp  trans.hpp
src/characters/: dad.c  dad.cpp  dad.h  gf.cpp  gf.h
src/engine/: animation.cpp  animation.h  animation.hpp  assets.cpp  assets.hpp  audio_buffer.hpp  audio_file_readers.cpp  audio_file_readers.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_streamed_file.cpp  audio_streamed_file.hpp  audiomanager.cpp  audiomanager.hpp  file.cpp  file.hpp  hash.hpp  input.cpp  input.hpp  object.cpp  object.hpp  renderer.hpp  scene.cpp  scene.hpp  timer.cpp  timer.hpp  tween.hpp
src/engine/pc/: glad.c  glad.h  renderergl.cpp  renderergl.hpp  renderersdl.cpp  renderersdl.hpp
src/engine/psp/: callbacks.h  glib2d.cpp  glib2d.hpp  rendererpsp.cpp  rendererpsp.hpp
src/menu/: donate.cpp  donate.h  freeplay.cpp  freeplay.h  mainmenu.cpp  mainmenu.h  options.cpp  options.h  storymode.cpp  storymode.h  title.cpp  title.h
src/psp/: animation.cpp  animation.h  assetmanager.cpp  assetmanager.h  audio.cpp  audio.h  audio_adpcm_decoder.cpp  audio_adpcm_decoder.h  audio_buffer.h  audio_file_readers.cpp  audio_file_readers.h  audio_mixer.cpp  audio_mixer.h  audio_streamed_file.cpp  audio_streamed_file.h  audiobuffer.h  audioreaders.cpp  audioreaders.h  audiostreams.cpp  callbacks.h  file.cpp  file.h  font.cpp  font.h  gfx.cpp  gfx.h  gfx_common.cpp  gfx_common.h  gfx_renderer_opengl.cpp  gfx_renderer_opengl.h  gfx_renderer_psp.cpp  gfx_renderer_psp.h  glib2d.cpp  glib2d.h  hash.h  input.cpp  input.h  me.cpp  me.h  memory.cpp  (+11 more)
src/psp/fonts/: font_bold.h  font_font.h
src/scenes/: freeplay.cpp  freeplay.hpp  mainmenu.cpp  mainmenu.hpp  playstate.cpp  playstate.hpp  test.cpp  test.hpp  title.cpp  title.hpp
tools/: convasset.py  requirements.txt  tools.cmake
